# csa_ros

./: LICENSE  README.md  create_module.sh
csa_common/: CMakeLists.txt  package.xml  setup.py
csa_common/src/csa_common/: activity.py  am_decompose.py  am_disabled.py  am_discrete_action.py  am_pass_through.py  arb_newest.py  arb_priority.py  directed_graph.py  inert.py  standby.py
csa_module/: CMakeLists.txt  package.xml  setup.py
csa_module/src/: arbitration.py  control.py  tactics.py
csa_module/src/csa_module/: activity_manager.py  activity_manager_algorithm.py  arbitration.py  arbitration_algorithm.py  control.py  module.py  tactic.py  tactics.py  tactics_algorithm.py  test_module.py
csa_module/template/: csa_config_temp.txt  csa_launch_temp.txt  csa_module_temp.txt
csa_module/tests/: test_activity_manager.py  test_arbitration.py  test_control.py  test_module.py
csa_monitor/: CMakeLists.txt  package.xml  setup.py
csa_monitor/config/: csa_monitor_config.yaml
csa_monitor/launch/: csa_monitor.launch
csa_monitor/scripts/: plot_timeline.py
csa_monitor/src/csa_monitor/: monitor.py
csa_msgs/: CMakeLists.txt  package.xml  setup.py
csa_msgs/msg/: Directive.msg  ModuleStatus.msg  Parameters.msg  Response.msg  Status.msg  TimedPoseArray.msg
csa_msgs/src/: directive.py  response.py
csa_msgs/src/csa_msgs/: directive.py  key_value.py  packing.py  params.py  response.py  stamps.py  status.py
